# Test

./: .travis.yml  CMakeLists.txt  Git_help.txt  README.md  Test.sln  checkchange.txt  main1.c  main1.cpp  return  task1.c  task1.cpp  task1.h
C-lab-1/: main1.cpp  main2.cpp  main3.cpp  main4.cpp  task1.cpp  task1.h  task2.cpp  task2.h  task3.cpp  task3.h  task4.cpp  task4.h
Debug/: Test.ilk
Work/: main.c  main1.c  task.c  task1.c  task1.h
WorkB3/: main1.c  task1.c
include/: .task1.h.swp  Task1.h  task1.h  test1.h
src/: Task1.cpp  Test.cpp  Test1.cpp  main.cpp  main1.c  main1.cpp  main1_1.cpp  task.cpp  task1.c  task1.cpp  task1_1.cpp  task2.cpp  test1.cpp
task1/: task1.VC.db  task1.sln
task1/ipch/TASK1-47049f19/: TASK1-5c4b9390.ipch
task1/task1/: ReadMe.txt  main.c  task1.c  task1.vcxproj  task1.vcxproj.filters
task1/task1/Debug/: vc140.idb
task1/task1/Debug/task1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  task1.lastbuildstate
test/: README.md
test/include/: README.md  task1.h
test/src/: README.md  main1.cpp
test/test/: test_lab1.cpp
work/: main.c  main1.c  main1.h  task1.c  task1.c.txt  task1.h  test-doc.txt  test.c  test1.txt
work-b19/: main1.c
work/0001/: CheckAge.c  main.c
work/b2/: main1.c  task1.c
work1/: main.c  task1.c
